--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^7.1.0",
     "rate-limiter": "^0.2.0",
     "swagger-ui-express": "^4.1.6",
+    "validator": "^13.9.0",
     "xss-clean": "^0.1.1",
     "yamljs": "^0.3.0"
   },
